--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/HuitingFENG/project-testing-team-i#readme",
   "dependencies": {
     "playwright": "^1.41.1"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.41.1"
   }
 }
